<resources>
    <string name="app_name">My Application</string>
    <string name="memory_allocation">Memory Allocation</string>
    <string name="deadlock_avoidance">Deadlock Avoidance</string>
    <string name="deadlock_detection">Deadlock Detection</string>
    <string name="process_synchronisation">Process Synchronisation</string>
    <string name="process_scheduling">Process Scheduling</string>
    <string name="os_algorithm_simulator">OS Algorithm Simulator!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="disk_scheduling">Disk Scheduling</string>
    <string name="create_resource">Create Resource</string>
    <string name="create_process">Create Process</string>
    <string name="preset">Preset</string>
    <string name="random">Random</string>
    <string name="custom">Custom</string>
    <string name="process_2_name">Process 2 Name</string>
    <string name="process_1_name">Process 1 Name</string>
    <string name="resource_1_name">Resource 1 name</string>
    <string name="resource_2_name">Resource 2 Name</string>
    <string name="submit">Submit</string>
    <string name="add_process">Add Process</string>
    <string name="process_name">Process Name</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="burst_time">Burst Time</string>
    <string name="paging">Paging</string>
    <string name="enter_page_requests_separated_by_comma">Enter page requests(separated by comma)</string>
    <string name="input_details">Input details:</string>
    <string name="enter_queue_capacity">Enter queue capacity</string>
    <string name="schedule">Schedule</string>
    <string name="enter_disk_requests_comma_separated">Enter disk requests (comma-separated)</string>
    <string name="calculate">Calculate</string>
    <string name="enter_available_matrix_e_g_3_1_1_2">Enter available matrix (e.g., 3 1 1 2)</string>
    <string name="enter_max_matrix_e_g_3_3_2_2_n1_1_3_4">Enter max matrix (e.g., 3 3 2 2\n1 1 3 4)</string>
    <string name="enter_allocation_matrix_e_g_1_2_2_1_n1_0_3_3">Enter allocation matrix (e.g., 1 2 2 1\n1 0 3 3)</string>
    <string name="enter_number_of_resources">Enter number of resources</string>
    <string name="enter_number_of_processes">Enter number of processes</string>
    <string name="enter_disk_requests_comma_separated1">Enter disk requests (comma-separated)</string>
    <string name="enter_initial_head_position1">Enter initial head position</string>
    <string name="schedule1">schedule</string>
    <string name="error_input">Error: Please check your input.</string>
    <string name="number_of_frames">Number of Frames</string>
    <string name="initial_semaphorte_value">Enter initial semaphorte value</string>
    <string name="number_of_threads">Enter number of threads</string>
    <string name="first_fit">First Fit</string>
    <string name="best_fit">Best Fit</string>
    <string name="worst_fit">Worst Fit</string>
    <string name="add_memory_block">Add Memory block</string>
    <string name="page_replacement">Page Replacement</string>
</resources>