<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_algorithm_simulator"
            android:textAlignment="center"
            android:textSize="40sp" />

        <Button
            android:id="@+id/deadDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadlock_detection" />

        <Button
            android:id="@+id/procSynch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_synchronisation" />

        <Button
            android:id="@+id/procSched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_scheduling" />

        <Button
            android:id="@+id/paging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_replacement" />

        <Button
            android:id="@+id/memAlloc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_allocation" />

        <Button
            android:id="@+id/diskSched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disk_scheduling" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00000000"
            android:foreground="@android:drawable/ic_menu_manage"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>