<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".process_Synch" >

    <EditText
        android:id="@+id/semValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/initial_semaphorte_value"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/threadNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_of_threads"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Critical Section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/critSectionImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#E81919"
                app:srcCompat="@android:drawable/ic_lock_idle_lock" />

            <TextView
                android:id="@+id/sValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  S = 0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/threadLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>
</LinearLayout>